# panutils

./: Cargo.toml  README.md
genomes/: GCF_002012065.1_ASM201206v1_genomic.fna  GCF_006400955.1_ASM640095v1_genomic.fna  merged.gz.fai  test_merged.fa
src/: cmdline.rs  fastixe.rs  lib.rs  main.rs
tests/: GCF_002012065.1_ASM201206v1_genomic.fna  GCF_006400955.1_ASM640095v1_genomic.fna  test.rs  test_genome_list.txt
