[package]
name = "panutils"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_cmd = "2.0.16"
# bgzip = "0.3.1"
clap = { version = "4.5.35", features = ["derive"] }
crossbeam-channel = "0.5.15"
flate2 = "1.1.1"
libdeflater = "1.23.1"
log = "0.4.27"
needletail = { version = "0.6"}
rayon = "1.10.0"
regex = "1.11.1"
rust-htslib = { version = "0.49", default-features = false, optional = true}
simple_logger = "5.0.0"

[features]
default = ["c_ffi"] 
c_ffi = ["rust-htslib"] 
